src/objects/UGI_Control_Mitigation__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <label>A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Name__c</fullName>
        <label>App Name</label>
        <picklist>
            <picklistValues>
                <fullName>UGI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit</label>
        <referenceTo>UGI_Audit__c</referenceTo>
        <relationshipLabel>Controls/Mitigations</relationshipLabel>
        <relationshipName>Controls_Mitigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <label>C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chris_Wagner__c</fullName>
        <formula>IF(CONTAINS( Project_Leader__c , &quot;Chris Wagner&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chris Wagner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Degree_of_Automation__c</fullName>
        <label>Degree of Automation</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Degree_of_Change_in_Personnel_Performing__c</fullName>
        <label>Degree of Change in Personnel Performing</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Degree_of_Competence__c</fullName>
        <label>Degree of Competence</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR__c</fullName>
        <label>FR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICFR__c</fullName>
        <label>ICFR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IC__c</fullName>
        <label>IC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mike_Mara__c</fullName>
        <formula>IF(CONTAINS( Project_Leader__c ,&quot;Mike Mara&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mike Mara</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numeric_Total__c</fullName>
        <label>Numeric Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Risk_Score__c</fullName>
        <formula>IF(Numeric_Total__c &gt;= 14,5,
IF(Numeric_Total__c &gt;= 12,4,
IF(Numeric_Total__c &gt;= 9,3,
IF(Numeric_Total__c &gt;= 7,2,
IF(Numeric_Total__c &gt;= 5,1,
0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P__c</fullName>
        <label>P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plans__c</fullName>
        <label>Plans</label>
        <length>125500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress (on track)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress (slightly delayed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress (delayed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Leader__c</fullName>
        <label>Project Leader</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Propensity_for_Management_to_Override_Co__c</fullName>
        <label>Propensity for Management to Override Co</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Completion_Date__c</fullName>
        <label>Proposed Completion Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk</label>
        <referenceTo>UGI_Risk__c</referenceTo>
        <relationshipLabel>Controls/Mitigations</relationshipLabel>
        <relationshipName>Controls_Mitigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <picklist>
            <picklistValues>
                <fullName>AmeriGas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UGI Energy Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UGI Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holding Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antargaz/Finagaz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvantiGas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flaga</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sherwood_Probeck__c</fullName>
        <formula>IF(CONTAINS( Project_Leader__c ,&quot;Sherwood Probeck&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sherwood Probeck</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detailed Risk Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Control/Mitigation</label>
    <listViews>
        <fullName>UGI</fullName>
        <columns>NAME</columns>
        <columns>Plans__c</columns>
        <columns>Complete__c</columns>
        <columns>Scope__c</columns>
        <columns>Progress__c</columns>
        <columns>Project_Leader__c</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>App_Name__c</field>
            <operation>equals</operation>
            <value>UGI</value>
        </filters>
        <label>UGI</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controls/Mitigations</pluralLabel>
    <recordTypes>
        <fullName>Detailed_Risk_Assessment</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>IA</fullName>
        <active>true</active>
        <label>IA</label>
    </recordTypes>
    <recordTypes>
        <fullName>SERC</fullName>
        <active>true</active>
        <label>SERC</label>
    </recordTypes>
    <recordTypes>
        <fullName>SOX</fullName>
        <active>true</active>
        <label>SOX</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>